WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157796
Fix the !ENABLE(WEB_TIMING) build after
r200887
https://bugs.webkit.org/show_bug.cgi?id=157796
Summary
Fix the !ENABLE(WEB_TIMING) build after r200887
Csaba Osztrogonác
Reported
2016-05-17 09:33:49 PDT
https://trac.webkit.org/changeset/200887
broke the !ENABLE(WEB_TIMING) build, let's fix it. ResourceTimingInformation should be used only inside #if ENABLE(WEB_TIMING) compile time guard.
Attachments
Patch
(5.42 KB, patch)
2016-05-17 09:36 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-05-17 09:36:50 PDT
Created
attachment 279132
[details]
Patch
Chris Dumez
Comment 2
2016-05-17 09:44:35 PDT
Comment on
attachment 279132
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2016-05-17 10:06:21 PDT
Comment on
attachment 279132
[details]
Patch Clearing flags on attachment: 279132 Committed
r201018
: <
http://trac.webkit.org/changeset/201018
>
WebKit Commit Bot
Comment 4
2016-05-17 10:06:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug