Fix the !ENABLE(WEB_TIMING) build after r200887 https://bugs.webkit.org/show_bug.cgi?id=157796

Reviewed by Chris Dumez.

* loader/DocumentThreadableLoader.cpp:
(WebCore::DocumentThreadableLoader::didFinishLoading):
(WebCore::DocumentThreadableLoader::loadRequest):
* loader/DocumentThreadableLoader.h:
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::requestResource):
(WebCore::CachedResourceLoader::revalidateResource):
(WebCore::CachedResourceLoader::loadResource):
* loader/cache/CachedResourceLoader.h:


Canonical link: https://commits.webkit.org/175923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201018 268f45cc-cd09-0410-ab3c-d52691b4dbfc