Source/WebCore/loader/DocumentThreadableLoader.cpp
@@ -325,8 +325,10 @@ void DocumentThreadableLoader::notifyFinished(CachedResource* resource)
 
 void DocumentThreadableLoader::didFinishLoading(unsigned long identifier, double finishTime)
 {
+#if ENABLE(WEB_TIMING)
     if (RuntimeEnabledFeatures::sharedFeatures().resourceTimingEnabled())
         m_resourceTimingInfo.addResourceTiming(m_resource.get(), &m_document);
+#endif
 
     if (m_actualRequest) {
         InspectorInstrumentation::didFinishLoading(m_document.frame(), m_document.frame()->loader().documentLoader(), identifier, finishTime);
@@ -396,8 +398,10 @@ void DocumentThreadableLoader::loadRequest(const ResourceRequest& request, Secur
         if (m_resource) {
             m_resource->addClient(this);
 
+#if ENABLE(WEB_TIMING)
             if (RuntimeEnabledFeatures::sharedFeatures().resourceTimingEnabled())
                 m_resourceTimingInfo.storeResourceTimingInitiatorInformation(m_resource, newRequest, m_document.frame());
+#endif
         }
 
         return;
