Source/WebCore/loader/DocumentThreadableLoader.h
@@ -106,7 +106,9 @@ namespace WebCore {
         ThreadableLoaderClient* m_client;
         Document& m_document;
         ThreadableLoaderOptions m_options;
+#if ENABLE(WEB_TIMING)
         ResourceTimingInformation m_resourceTimingInfo;
+#endif
         bool m_sameOriginRequest;
         bool m_simpleRequest;
         bool m_async;
